# door_estimation_tracking

./: README.md  install.sh  requirements.txt
door_estimation/: CMakeLists.txt  estimate.py  package.xml
door_estimation/bags/: bag_reader.py
door_estimation/estimation/: bbox_3d.py  candidate_pcd_3d.py  hinge_side_detection.py  main_estimation.py  params.py  ransac.py  reprojection.py
door_estimation/kf/: door_position_rs_to_world.py  kalman_filter.py
door_estimation/msg/: msg_filter.py
door_estimation/nodes/: door_tf_broadcaster.py  tf_reader.py
door_estimation/src/door_estimation/: config.yaml  estimate.py  msg_filter.py  pipeline.py  ros_utils.py  scripts.py  yolov5_trt.py
door_estimation/utils/: ros_utils.py
door_estimation/viz/: plot.xml  rviz.rviz
door_estimation/yolov5/pytorch/: detect.py
door_estimation/yolov5/tensorrt/: yolov5_trt.py
door_estimation_msgs/: CMakeLists.txt  package.xml
door_estimation_msgs/msg/: DoorEstimationResult.msg
door_estimation_msgs/src/: test.py
