<?xml version="1.0"?>
<package format="2">

  <!-- Package Header -->
  <name>door_estimation_msgs</name>
  <version>0.0.1</version>
  <description>Definiton of door estimation results messages type.</description>
  <maintainer email="yifdong@ethz.ch">Yifei Dong</maintainer>
  <author email="yifdong@ethz.ch">Yifei Dong</author>

  <license>ethz</license>

  <!--Package Dependencies-->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>message_generation</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>message_runtime</exec_depend>

</package>
